fixed menu styles on mobile screens

--- a/modules/shared/components/atoms/DropDown/DropDown.module.css
+++ b/modules/shared/components/atoms/DropDown/DropDown.module.css
@@ -7,7 +7,7 @@
 }
 
 .menu {
-  @apply bg-white shadow-soft rounded-md p-2 flex flex-col absolute top-0 left-12 w-5xl;
+  @apply bg-white shadow-soft rounded-md p-2 flex flex-col absolute -top-2 right-8 md:left-12 w-5xl;
 }
 
 .menu-item {
